--- a/app/src/main/res/layout/item_flipper2.xml
+++ b/app/src/main/res/layout/item_flipper2.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
@@ -16,6 +16,31 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+<!--    <TextView-->
+<!--        android:id="@+id/year"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_below="@id/title"-->
+<!--        android:layout_marginTop="19dp"-->
+<!--        android:text="28"-->
+<!--        android:textColor="#fff"-->
+<!--        android:textSize="30sp"-->
+<!--        app:layout_constraintEnd_toStartOf="@+id/day"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        app:layout_constraintTop_toBottomOf="@+id/title" />-->
+
+<!--    <TextView-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_below="@id/year"-->
+<!--        android:text="часов"-->
+<!--        android:textColor="#fff"-->
+<!--        android:textSize="14sp"-->
+<!--        android:gravity="center"-->
+<!--        app:layout_constraintEnd_toEndOf="@+id/year"-->
+<!--        app:layout_constraintStart_toStartOf="@+id/year"-->
+<!--        app:layout_constraintTop_toBottomOf="@+id/year" />-->
 
     <TextView
         android:id="@+id/day"
@@ -39,7 +64,9 @@
         android:textColor="#fff"
         android:textSize="14sp"
         android:gravity="center"
-         />
+        app:layout_constraintEnd_toEndOf="@+id/day"
+        app:layout_constraintStart_toStartOf="@+id/day"
+        app:layout_constraintTop_toBottomOf="@+id/day" />
 
     <TextView
         android:id="@+id/hour"
@@ -120,4 +147,4 @@
         app:layout_constraintStart_toStartOf="@+id/seconds"
         app:layout_constraintTop_toBottomOf="@+id/seconds" />
 
-</RelativeLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
