--- a/app/src/main/res/layout/widget.xml
+++ b/app/src/main/res/layout/widget.xml
@@ -15,6 +15,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_toStartOf="@id/next_note"
+        android:flipInterval="3000"
+        android:autoStart="true"
         />
 
     <ImageView
