--- a/app/src/main/res/layout/item_flipper.xml
+++ b/app/src/main/res/layout/item_flipper.xml
@@ -1,10 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:layout_height="wrap_content">
 
     <TextView
         android:id="@+id/title"
@@ -12,112 +10,126 @@
         android:layout_height="wrap_content"
         android:text="До нового года"
         android:textColor="#fff"
-        android:textSize="22sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:textSize="20sp"
+        android:layout_centerHorizontal="true"
+        />
 
-    <TextView
-        android:id="@+id/day"
+
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_centerHorizontal="true"
         android:layout_below="@id/title"
-        android:layout_marginTop="19dp"
-        android:text="28"
-        android:textColor="#fff"
-        android:textSize="30sp"
-        app:layout_constraintEnd_toStartOf="@+id/hour"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/title" />
+        android:layout_marginTop="19dp">
 
-    <TextView
-        android:id="@+id/textView8"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/day"
-        android:text="дней"
-        android:textColor="#fff"
-        android:textSize="14sp"
-        android:gravity="center"
-         />
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="10dp">
 
-    <TextView
-        android:id="@+id/hour"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/title"
-        android:layout_marginTop="19dp"
-        android:text="28"
-        android:textColor="#fff"
-        android:textSize="30sp"
-        app:layout_constraintEnd_toStartOf="@+id/minutes"
-        app:layout_constraintStart_toEndOf="@+id/day"
-        app:layout_constraintTop_toBottomOf="@+id/title" />
+            <TextView
+                android:id="@+id/day"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="28"
+                style="@style/style_for_text_in_widget_title"
+                android:layout_centerHorizontal="true"
+                />
 
-    <TextView
-        android:id="@+id/textView9"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/hour"
-        android:text="часов"
-        android:textColor="#fff"
-        android:textSize="14sp"
-        android:gravity="center"
-        app:layout_constraintEnd_toEndOf="@+id/hour"
-        app:layout_constraintStart_toStartOf="@+id/hour"
-        app:layout_constraintTop_toBottomOf="@+id/hour" />
+            <TextView
+                android:id="@+id/textView8"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/day"
+                android:text="дней"
+                style="@style/style_for_text_in_widget_content"
+                android:layout_centerHorizontal="true"
+                />
 
+        </RelativeLayout>
 
-    <TextView
-        android:id="@+id/minutes"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/title"
-        android:layout_marginTop="19dp"
-        android:text="28"
-        android:textColor="#fff"
-        android:textSize="30sp"
-        app:layout_constraintEnd_toStartOf="@+id/seconds"
-        app:layout_constraintStart_toEndOf="@+id/hour"
-        app:layout_constraintTop_toBottomOf="@+id/title" />
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="10dp">
 
-    <TextView
-        android:id="@+id/textView7"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/minutes"
-        android:text="минут"
-        android:textColor="#fff"
-        android:textSize="14sp"
-        android:gravity="center"
-        app:layout_constraintEnd_toEndOf="@+id/minutes"
-        app:layout_constraintStart_toStartOf="@+id/minutes"
-        app:layout_constraintTop_toBottomOf="@+id/minutes" />
+            <TextView
+                android:id="@+id/hour"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="28"
+                style="@style/style_for_text_in_widget_title"
+                android:layout_centerHorizontal="true"
+                />
 
-    <TextView
-        android:id="@+id/seconds"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/title"
-        android:layout_marginTop="19dp"
-        android:text="28"
-        android:textColor="#fff"
-        android:textSize="30sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/minutes"
-        app:layout_constraintTop_toBottomOf="@+id/title" />
+            <TextView
+                android:id="@+id/textView7"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/hour"
+                android:text="часов"
+                style="@style/style_for_text_in_widget_content"
+                android:layout_centerHorizontal="true"
+                />
 
-    <TextView
-        android:id="@+id/textView11"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/seconds"
-        android:text="секунд"
-        android:textColor="#fff"
-        android:textSize="14sp"
-        android:gravity="center"
-        app:layout_constraintEnd_toEndOf="@+id/seconds"
-        app:layout_constraintStart_toStartOf="@+id/seconds"
-        app:layout_constraintTop_toBottomOf="@+id/seconds" />
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="10dp">
+
+            <TextView
+                android:id="@+id/minutes"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="28"
+                style="@style/style_for_text_in_widget_title"
+                android:layout_centerHorizontal="true"
+                />
+
+            <TextView
+                android:id="@+id/textView6"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/minutes"
+                android:text="дней"
+                style="@style/style_for_text_in_widget_content"
+                android:layout_centerHorizontal="true"
+                />
+
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp">
+
+            <TextView
+                android:id="@+id/seconds"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="28"
+                style="@style/style_for_text_in_widget_title"
+                android:layout_centerHorizontal="true"
+                />
+
+            <TextView
+                android:id="@+id/textView5"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/seconds"
+                android:text="часов"
+                style="@style/style_for_text_in_widget_content"
+                android:layout_centerHorizontal="true"
+                />
+
+        </RelativeLayout>
+
+    </LinearLayout>
+
 
 </RelativeLayout>
