--- a/app/src/main/res/layout/fragment_list_notes.xml
+++ b/app/src/main/res/layout/fragment_list_notes.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:paddingStart="16dp"
     android:paddingEnd="16dp"
     android:paddingTop="40dp"
@@ -12,21 +13,25 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/list_note"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        android:layout_alignBottom="@id/redirect_to_create_note"
+        android:paddingBottom="30dp"
         />
 
     <TextView
+        android:id="@+id/redirect_to_create_note"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Добавить новый отсчёт"
         android:textColor="#3A2D49"
         android:textSize="16sp"
-        android:background="@drawable/background_btn_navigate_to_list"
+        android:background="@drawable/background_btn_navigate"
         android:gravity="center"
         android:layout_gravity="center"
         android:paddingTop="11dp"
         android:paddingBottom="11dp"
-        android:layout_marginTop="29dp"
+        android:layout_alignParentBottom="true"
         />
 
-</LinearLayout>
+</RelativeLayout>
