--- a/app/src/main/res/layout/fragment_save_note.xml
+++ b/app/src/main/res/layout/fragment_save_note.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingStart="16dp"
-    android:paddingEnd="16dp">
+    android:paddingEnd="16dp"
+    android:paddingTop="50dp">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -39,6 +40,7 @@
             />
 
         <TextView
+            android:id="@+id/ready"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Ок"
@@ -57,12 +59,13 @@
     </LinearLayout>
 
     <TextView
+        android:id="@+id/redirect_to_create_note"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Добавить новый отсчёт"
         android:textColor="#3A2D49"
         android:textSize="16sp"
-        android:background="@drawable/background_btn_navigate_to_list"
+        android:background="@drawable/background_btn_navigate"
         android:gravity="center"
         android:layout_gravity="center"
         android:paddingTop="11dp"
@@ -71,12 +74,13 @@
         />
 
     <TextView
+        android:id="@+id/redirect_to_list"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Смотреть свои отсчёты"
         android:textColor="#3A2D49"
         android:textSize="16sp"
-        android:background="@drawable/background_btn_navigate_to_list"
+        android:background="@drawable/background_btn_navigate"
         android:gravity="center"
         android:layout_gravity="center"
         android:paddingTop="11dp"
