--- a/app/src/main/res/layout/item_flipper.xml
+++ b/app/src/main/res/layout/item_flipper.xml
@@ -8,9 +8,10 @@
         android:id="@+id/title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="До нового года"
+        android:text="Ваше напоминание"
         android:textColor="#fff"
         android:textSize="20sp"
+        android:maxLength="20"
         android:layout_centerHorizontal="true"
         />
 
@@ -32,7 +33,6 @@
                 android:id="@+id/day"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="28"
                 style="@style/style_for_text_in_widget_title"
                 android:layout_centerHorizontal="true"
                 />
@@ -59,7 +59,6 @@
                 android:id="@+id/hour"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="28"
                 style="@style/style_for_text_in_widget_title"
                 android:layout_centerHorizontal="true"
                 />
@@ -86,7 +85,6 @@
                 android:id="@+id/minutes"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="28"
                 style="@style/style_for_text_in_widget_title"
                 android:layout_centerHorizontal="true"
                 />
@@ -96,7 +94,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/minutes"
-                android:text="дней"
+                android:text="минут"
                 style="@style/style_for_text_in_widget_content"
                 android:layout_centerHorizontal="true"
                 />
@@ -112,7 +110,6 @@
                 android:id="@+id/seconds"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="28"
                 style="@style/style_for_text_in_widget_title"
                 android:layout_centerHorizontal="true"
                 />
@@ -122,7 +119,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/seconds"
-                android:text="часов"
+                android:text="секунд"
                 style="@style/style_for_text_in_widget_content"
                 android:layout_centerHorizontal="true"
                 />
