--- a/app/src/main/res/xml/widget_metadata.xml
+++ b/app/src/main/res/xml/widget_metadata.xml
@@ -4,5 +4,5 @@
     android:initialLayout="@layout/widget"
     android:minHeight="70dp"
     android:minWidth="280dp"
-    android:updatePeriodMillis="2400000">
+    android:updatePeriodMillis="0">
 </appwidget-provider>
